# Diverciphy

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
k8s/: config_secret.yaml  deployments.yaml  services.yaml  statefulset.yaml
src/core/: assemble.py  shred.py
src/endpoints/: __init__.py
src/endpoints/analytics/: analytics_endpoints.py
src/endpoints/auth/: auth_endpoints.py
src/endpoints/crypto_health/: crypto_health.py
src/endpoints/nodes/: nodes_endpoints.py
src/endpoints/recieve_metadata/: recieve_metadata.py
src/endpoints/recieve_public_key/: recieve_public_key.py
src/endpoints/recieve_shard/: recieve_shard.py
src/endpoints/recieve_shred/: recieve_shred.py
src/endpoints/send_public_key/: send_public_key.py
src/endpoints/send_shard/: send_shard.py
src/endpoints/send_shred/: send_shred.py
src/master/: master_assemble.py  master_shred.py
src/utils/: auth.py  get_latest_file_from_dir.py  get_public_ip.py  read_file.py  requirements.txt  timestamp_consistency_checker.py  write_file.py
src/worker/: .worker_env1_a  .worker_env1_s  .worker_env2_a  .worker_env2_s  .worker_env3_a  .worker_env3_s  .worker_env4_a  .worker_env4_s  .worker_env5_a  .worker_env5_s  worker_main.py
tests/: test_jwt_auth.py  test_key_consistency.py  test_shredding.py  verify_new_endpoints.py
